# SigmaProm

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  grafana_dashboard.json  pyproject.toml  single_interval_test.json  test_intervals.json
src/hello/: main.py
src/prom_bench_stats/: __init__.py  cli.py  generate_plots.py  grafana_import.py  plotting.py  prometheus_fetch.py  settings.py  statistical_analysis.py  web.py
src/prom_bench_stats/api/: dashboard.py  health.py  metrics.py
src/prom_bench_stats/static/: index.html
src/prom_bench_stats/static/js/: app.js  dashboard.js  statistical.js
tests/: __init__.py  test_api.py  test_csv_download.js  test_generate_plots.py  test_grafana_import.py  test_integration.py  test_plotting.py  test_prometheus_fetch.py  test_settings.py  test_statistical_analysis.py  test_windowed_plotting.py
