[project]
name = "prom-bench-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.poetry]
packages = [{include = "prom_bench_stats", from = "src"}]

[tool.poetry.scripts]
prom-web = "prom_bench_stats.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (<9.0.0)"
]
